[package]
name = "cxa-aes"
version = "1.0.0"
edition = "2021"
description = "AES-GCM and AES-CBC implementations with hardware acceleration for CXA"
authors = ["XvoidcrewX <voidcrew@cock.li>"]
license = "MIT"
repository = "https://github.com/XvoidcrewX/CXA"
documentation = "https://github.com/XvoidcrewX/CXA/docs"
readme = "../../README.md"
keywords = ["cryptography", "aes", "encryption", "gcm", "cbc"]
categories = ["cryptography", "security"]

[features]
default = ["std"]
std = []
asm = ["aesni/asm"]
aesni = ["dep:aesni"]
hardware-acceleration = ["aesni"]
avalon = ["dep:avalon"]

[dependencies]
zeroize = "1.7"
getrandom = { version = "0.2", features = ["js"] }
subtle = "2.5"

[dev-dependencies]
criterion = "0.5"
hex-literal = "0.4"
paste = "1.0"

[[bench]]
name = "aes_benchmark"
harness = false
