[package]
name = "cxa-ecc"
version = "2.0.0"
edition = "2021"
description = "CXA Elliptic Curve Cryptography - Curve25519 implementation"
authors = ["CXA Development Team"]

[dependencies]
x25519-dalek = { version = "2.0", features = ["zeroize"] }
rand = "0.8"
zeroize = "1.6"
blake3 = "1.5"

[dev-dependencies]

[lib]
crate-type = ["rlib", "staticlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
debug = false
