[package]
name = "cxa-mac"
version = "1.0.0"
edition = "2021"
description = "Message Authentication Codes for CXA - HMAC, CMAC, Poly1305"
authors = ["XvoidcrewX <voidcrew@cock.li>"]
license = "MIT"
repository = "https://github.com/XvoidcrewX/CXA"
documentation = "https://github.com/XvoidcrewX/CXA/docs"
readme = "../../README.md"
keywords = ["cryptography", "mac", "hmac", "authentication"]
categories = ["cryptography", "security"]

[features]
default = ["std"]
std = []

[dependencies]
zeroize = "1.7"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "mac_benchmark"
harness = false
